--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score App Project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="text div">
@@ -14,10 +17,20 @@
         <div class="container-div-0ne">
             <h2>Home</h2>
             <input type="text" id="input-one" readonly>
+            <div>
+                <button>+ 1</button>
+                <button>+ 2</button>
+                <button>+ 3</button>
+            </div>
         </div>
         <div class="container-div-two">
             <h2>Away</h2>
             <input type="text" id="input-two" readonly>
+            <div>
+                <button>+ 1</button>
+                <button>+ 2</button>
+                <button>+ 3</button>
+            </div>
         </div>
     </div>
 </body>
