added and increment function

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="container">
         <div class="container-div-0ne">
             <h2>Home</h2>
-            <input type="text" id="input-one" readonly>
+            <p id="input-one">0</p>
             <div>
-                <button>+ 1</button>
+                <button  onclick="increment()">+ 1</button>
                 <button>+ 2</button>
                 <button>+ 3</button>
             </div>
         </div>
         <div class="container-div-two">
             <h2>Away</h2>
-            <input type="text" id="input-two" readonly>
+            <p id="input-two">0</p>
             <div>
                 <button>+ 1</button>
                 <button>+ 2</button>
@@ -33,5 +33,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
