--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="container-div-two">
-            <h2>Away</h2>
+            <h2>Guess</h2>
             <p id="input-two">0</p>
             <div>
                 <button>+ 1</button>
