--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="text div">
-        <h1>Backet ball Score App</h1>
+        <h1>Basket Ball Score App</h1>
     </div>
     <div class="container">
         <div class="container-div-0ne">
