Fist button done

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <p id="input-one">0</p>
             <div>
                 <button  onclick="increment()">+ 1</button>
-                <button>+ 2</button>
-                <button>+ 3</button>
+                <button onclick="plustwo()">+ 2</button>
+                <button onclick="plusthree()">+ 3</button>
+                <button onclick="Clear()">Clear</button>
             </div>
         </div>
         <div class="container-div-two">
