--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="text div">
@@ -28,9 +28,10 @@
             <h2>Guess</h2>
             <p id="input-two">0</p>
             <div>
-                <button>+ 1</button>
-                <button>+ 2</button>
-                <button>+ 3</button>
+                <button onclick="Increment1()">+ 1</button>
+                <button onclick="plustwo1()">+ 2</button>
+                <button onclick="plusthree1()">+ 3</button>
+                <button onclick="Clear1()">Clear</button>
             </div>
         </div>
     </div>
