away function first button added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Guess</h2>
             <p id="input-two">0</p>
             <div>
-                <button onclick="Increment1()">+ 1</button>
+                <button onclick="increment1()">+ 1</button>
                 <button onclick="plustwo1()">+ 2</button>
                 <button onclick="plusthree1()">+ 3</button>
                 <button onclick="Clear1()">Clear</button>
